# mixsim3d_gretsi

./: LICENSE  README.md  pyproject.toml  requirements.txt
drp/builder/: byol.py  moco.py  simclr.py  simsiam.py
drp/data/: data_transform.py  dataset.py
drp/handlers/: checkpoint.py  logger.py
drp/metrics/: accuracy_at_k.py  knn.py  r2_metric.py  scatter_metric.py
drp/train/: basemethod.py  byol_training.py  finetune.py  mixsim_training.py  mocotraining.py  predicting.py  simsiam_training.py
drp/utils/: ConvLSTM.py  arguments.py  backbone.py  config.py  ddp_setup.py  display.py  generate_offset.py  hostlist.py  iterative_mean.py  momentum.py  physics.py  pos_embed.py  time_distributed.py  time_utils.py  timer.py  to_csv_permeability.py
drp/utils/cf/: config.json  config_byol.json  config_finetune.json  config_inferent.json  config_mixsim.json  config_moco.json  config_predict.json  config_simclr.json  config_simsiam.json
scripts/: predict.py  run_inferent.py  train.py  train_byol.py  train_finetune.py  train_mixsim.py  train_moco.py  train_simclr.py  train_simsiam.py
topaze/: Makefile  README.md  ccc_train.sh  push_dataset.sh
